src/scss/utilities/_text.scss
.u-truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.u-word-break {
  overflow-wrap: break-word;
}

.u-ws-normal {
  white-space: normal;
}

.u-ws-nowrap {
  white-space: nowrap;
}

.u-ws-pre-wrap {
  white-space: pre-wrap;
}

.u-ws-pre-line {
  white-space: pre-line;
}

.u-text-left {
  text-align: start;
}

.u-text-center {
  text-align: center;
}

.u-text-right {
  text-align: end;
}

.u-text-underline {
  text-decoration: underline;
}

.u-text-uppercase {
  text-transform: uppercase;
}

